src/snapshots/linker__test_symbol_map does not find symbol in non existent namespace.snap
---
created: "2019-03-14T08:25:55.341470Z"
creator: insta@0.6.2
source: src/linker.rs
expression: "map.get_symbol(\"MissingNamespace\", \"Message\")"
---
None
