src/snapshots/linker__test_symbol_map finds symbol.snap
---
created: "2019-03-14T08:24:44.457298Z"
creator: insta@0.6.2
source: src/linker.rs
expression: "map.get_symbol(\"App.Namespace\", \"Message\")"
---
Some(
    Symbol {
        namespace: "App.Namespace",
        name: "Message",
        symbol_definition: Primitive
    }
)
